[Bugs] Fix background image jumping when accordion opens

--- a/src/styles/4 - elements/_page.scss
+++ b/src/styles/4 - elements/_page.scss
@@ -9,6 +9,7 @@ body {
   font-family: $font-roboto;
   background: url('../assets/images/bg.jpg') bottom center no-repeat;
   background-size: cover;
+  background-attachment: fixed;
   
   &.fullpage {
     min-height: 100vh;
